web-ui/app/scss/styles.scss
/* ... */
.unread-count {
  @include mail-count($secondary_callout);
}
.total-count {
  @include mail-count(#999);
}


/* ACTIONS */
#refresh-mails-trigger {
  i {
    margin-top: 3px;
    cursor: pointer;
    opacity: 0.9;
    padding: 4px;
    &:hover {
      opacity: 1;
      &:after {
        content: "\f021";
      }
      &:before {
        content: "refresh";
        font-size: 0.8em;
        padding-right: 5px;
      }
    }
  }
}

.buttons-group {
  clear: both;
  margin: 20px 0 0;
  padding: 0;
}

#draft-save-status {
  float: right;
  padding: 0.4rem 1.1rem;
  color: #91C2D1;
}

button {
  border: 1px solid transparent;
  i {
    margin-left: 5px;
  }
  &#trash-button, &#draft-button {
    background: #FFF;
    border: 1px solid #999;
    color: #999;
    float: right;
    margin-left: 5px;
    &:hover, &:focus {
      background: #EEE;
    }
  }
  &.close-mail-button {
    background: transparent;
    color: #999;
    float: right;
    &:hover {
      color: darken(#999, 10%);
    }
  }
  &.close-mail-button {
    position: absolute;
    left: 0;
    top: 0;
    margin: 0;
    padding: 3px 6px 5px;
    background: #DDD;
    opacity: 0.7;
    @include border-radius(0);
    &:hover {
      opacity: 1;
    }
    i {
      margin: 0;
    }
  }
  &.no-style {
    background: transparent;
    color: #999;
    padding: 0;
    margin: 0;
    i {
      margin: 0;
      padding: 0;
      vertical-align: middle;
    }
  }
}

.side-nav-toggle, .side-nav-toggle-icon {
  color: white;
  cursor: pointer;

  &:hover, &:focus {
    color: white;
  }
  background: $secondary;
  &.logout {
    color: $action_buttons;
  }
}

.side-nav-toggle-icon {
  padding: 9px 0px 8px 19px;
  display: block;
  left: 0;
  top: 0;
  position: relative;
}

.left-off-canvas-logo {
  img {
    padding: 9px 6px 6px 6px;
    width: 163px;
  }
}

.collapsed-nav {
  width: 50px;
  position: absolute;
  height: 100vh;
  background: $secondary;

  ul.shortcuts {
    li {
      position: relative;
      margin-bottom: 5px;
      opacity: 0.8;
      &.selected {
        background: $contrast;
        opacity: 1;
        cursor: default;
        a {
          color: $secondary;
          }
        }
      @include searching(6px, 26px, #666, 0.9em);
      a {
        display: block;
        position: relative;
        font-size: 1.4em;
        padding: 5px;
        color: white;
        text-align: center;
        &:hover {
          background: darken($contrast, 10%);
          color: $secondary;
          @include btn-transition;
          &.logout{
            color: #000000;
            background: $action_buttons;
          }
        }
        &[title]:hover:after {
          content: attr(title);
          @include tooltip;
        }
      }
      .unread-count, .total-count {
        font-size: 0.5em;
        padding: 1px 5px 0;
        top: 1px;
        left: 0;
        border: 1px solid #FFF;
        position: absolute;
        opacity: 0.95;
      }
      .total-count {
        background: #999;
      }
    }
  }
  #custom-tags-shortcuts {
    li {
      border-top: 1px solid #DDD;
    }
  }
  div.shortcut-label {
      font-size: xx-small;
      text-transform: uppercase;
      text-align: center;
  }
}
.move-right {
  ul.shortcuts {
    li {
      display: none;
    }
  }
}

.left-off-canvas-menu {
  width: 222px;
  -webkit-backface-visibility: hidden;
  box-sizing: content-box;
  left: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  overflow-y: auto;
}

.left-off-canvas-menu * {
  -webkit-backface-visibility: hidden;
}


.off-canvas-wrap {
  -webkit-backface-visibility: hidden;
  position: relative;
  width: 100%;
  overflow: hidden;
}

.off-canvas-wrap.move-right, .off-canvas-wrap.move-left {
  min-height: 100%;
  -webkit-overflow-scrolling: touch;
}

.inner-wrap {
  -webkit-backface-visibility: hidden;
  width: 100%;
}

.inner-wrap:before, .inner-wrap:after {
  content: " ";
  display: table;
}

.inner-wrap:after {
  clear: both;
}

.off-canvas-wrap.content {
  -webkit-transition: -webkit-transform 500ms ease;
  -moz-transition: -moz-transform 500ms ease;
  -ms-transition: -ms-transform 500ms ease;
  -o-transition: -o-transform 500ms ease;
  transition: transform 500ms ease;

  &.move-right {
    -webkit-transform: translate3d(10rem, 0, 0);
    -moz-transform: translate3d(10rem, 0, 0);
    -ms-transform: translate3d(10rem, 0, 0);
    -o-transform: translate3d(10rem, 0, 0);
    transform: translate3d(10rem, 0, 0);
  }
}

.move-right .exit-off-canvas {
  -webkit-backface-visibility: hidden;
  transition: background 300ms ease;
  cursor: pointer;
  display: block;
  position: absolute;
  background: rgba(255, 255, 255, 0.2);
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

@media only screen and (min-width:40.063em) {
  .move-right .exit-off-canvas:hover {
    background: rgba(255, 255, 255, 0.05);
  }
}

.off-canvas-wrap.move-right.menu {
  position: absolute;
}

.off-canvas-wrap.content {
  left: 50px;
  padding-right: 50px;
}

.offcanvas-overlap .left-off-canvas-menu, .offcanvas-overlap .right-off-canvas-menu {
  -ms-transform: none;
  -webkit-transform: none;
  -moz-transform: none;
  -o-transform: none;
  transform: none;
}

.offcanvas-overlap .exit-offcanvas-menu {
  -webkit-backface-visibility: hidden;
  transition: background 300ms ease;
  cursor: pointer;
  display: block;
  position: absolute;
  background: rgba(255, 255, 255, 0.2);
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}


#delete-modal {
  button#trash-button, button#archive-button {
    width: 40%;
    margin: 0 22px 30px;
    height: 80px;
  }
  small {
    font-size: 80%;
    display: block;
  }
}

@import "mascot.scss";

